Actualize programming style, dependencies and java versions